# NERC

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  RESULTS.md  STATUS.md  omnishader
bench/: bench_corpus_npy.cpp  bench_trace_codec.cpp
box_pipeline/: conf2fulljson.py  eval_slm.py  make_results.py  retrain_pipeline.sh  run_pipeline.sh  synth_pipeline.sh
box_pipeline/conf/: shader_1B.conf  shader_300M.conf  shader_3B.conf
data/bench/: README.md  sample_tokens.npy  synth_compile_at_k.csv  synth_compile_at_k.json  trace_codec.csv  trace_codec.json
data/shaders/: simple.frag  simple.frag.spv
include/omni/: bench.hpp  test.hpp  version.hpp
include/omni/analysis/: diff.hpp
include/omni/backends/: spirv_emit.hpp
include/omni/capture/: instrument.hpp
include/omni/cpuref/: interp.hpp
include/omni/frontends/: spirv.hpp
include/omni/gpu/: vulkan_capture.hpp
include/omni/ml/: dora.hpp  tinylm.hpp
include/omni/reward/: oracle.hpp
include/omni/store/: trace_store.hpp
include/omni/synth/: corpus.hpp  driver.hpp  renderer.hpp  validator.hpp
include/omni/timetravel/: timetravel.hpp
include/omni/trace/: codec.hpp  synth_columns.hpp
include/omni/uir/: cfg.hpp  ir.hpp  verify.hpp
research/: claims_digest.json  verified_claims.json
results/shader_lm_comparison/: RESULTS.txt  clean_after_ba.json  clean_before_ba.json  corpus_stats.json  dora3b_after_ba.json  phase2_data_and_tokenizer.md
results/shader_lm_comparison/dora32b/: metrics.json  samples.txt
results/shader_lm_comparison/dora3b/: metrics.json  samples.txt
results/shader_lm_comparison/slm/: metrics.json  samples.txt
src/: version.cpp
src/analysis/: diff.cpp
src/backends/: spirv_emit.cpp
src/capture/: instrument.cpp
src/cpuref/: interp.cpp
src/frontends/: spirv.cpp
src/gpu/: vulkan_capture.cpp
src/ml/: dora.cpp  tinylm.cpp
src/reward/: oracle.cpp
src/store/: trace_store.cpp
src/synth/: corpus.cpp  driver.cpp  renderer.cpp  validator.cpp
src/timetravel/: timetravel.cpp
src/trace/: codec.cpp
src/uir/: cfg.cpp  ir.cpp  verify.cpp
tests/: _test_main.cpp  test_capture.cpp  test_cfg.cpp  test_corpus.cpp  test_cpuref.cpp  test_diff.cpp  test_dora.cpp  test_gpu_capture.cpp  test_renderer.cpp  test_reward.cpp  test_smoke.cpp  test_spirv_backend.cpp  test_spirv_frontend.cpp  test_store.cpp  test_synth_driver.cpp  test_timetravel.cpp  test_tinylm.cpp  test_trace_codec.cpp  test_uir.cpp  test_validator.cpp
tools/: omni_render.cpp  omni_reward.cpp
tools/cli/: README.md  gen_local.py  gen_one.py
tools/data/: DATA_SOURCES.md  build_corpus.py  shadertoy_fetch.py  tokenize_corpus.py  train_bpe.py
tools/eval/: eval_batched.py
tools/eval/fixtures/: heldout_prompts.jsonl
tools/rl/: rl_refine.py
tools/synth/: gen_chat_pairs.py  gen_shaders.py  gen_verified.py  label_shaders.py  repair_loop.py
